--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/logo.jpg" />
+    <link rel="shortcut icon" href="./src/assets/Images/Favicon.png" type="image/x-icon">k
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SENAICraft</title>
   </head>
